--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URL=mongodb+srv://nikhilvgehlot003:L2VtMcgQWW9eypR0@codemania-backend.pyxgip4.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URL=mongodb+srv://nikhilvgehlot003:nikhil12345@codemania-backend.pyxgip4.mongodb.net/?retryWrites=true&w=majority
